Updating to latest version of the prototype.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22298

--- a/new.plone.org/static/developers.html
+++ b/new.plone.org/static/developers.html
@@ -14,14 +14,14 @@
 <div id="outer-wrapper"><div id="inner-wrapper">
 
 
-<div id="nav">		
+<div id="nav">
 
 	<div id="search">
 		<input type="search" value="Search Developers…" />
 	</div>
 	
 	<div id="user">
-		<a href="">Bruce Wayne ▼</a>
+		<a href="">Log in</a>
 	</div>
 
 	<ul id="main-nav" class="navigation">
@@ -88,7 +88,7 @@
 		<a id="footer-logo"
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system">
-			<img alt="" src="images/footer-logo.png" />
+			<img alt="" src="/static//static/images/footer-logo.png" />
 		</a>
 		<div id="footer-text">
 			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
