--- a/new.plone.org/static/downloads.html
+++ b/new.plone.org/static/downloads.html
@@ -8,7 +8,6 @@
 	<style type="text/css" media="screen">
 		@import url("plone.css");
 	</style>
-	<script type="text/javascript" src="slider.js"></script>
 </head>
 <body>
 <div id="outer-wrapper"><div id="inner-wrapper">
@@ -34,9 +33,16 @@
 	</ul>
 
 	<ul id="sub-nav" class="navigation">
-		<li><a href="">Get Plone</a></li
-		><li><a href="">Latest Add-on Products</a></li
-		><li><a href="">Submit New Add-on</a></li>
+		<li><a href="" class="selected">Plone</a></li
+		><li><a href="">Development</a></li
+		><li><a href="">Commerce</a></li
+		><li><a href="">Layout</a></li
+		><li><a href="">Themes</a></li
+		><li><a href="">Examples</a></li
+		><li><a href="">Weblogs</a></li
+		><li><a href="">I18n</a></li
+		><li><a href="" style="color: #666">Submit New +</a></li
+		>
 	</ul>
 
 </div>
@@ -50,7 +56,7 @@
 		<a id="footer-logo"
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system">
-			<img alt="" src="images/footer-logo.png" />
+			<img alt="" src="/static/images/footer-logo.png" />
 		</a>
 		<div id="footer-text">
 			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
