--- a/new.plone.org/static/documentation.html
+++ b/new.plone.org/static/documentation.html
@@ -17,16 +17,27 @@
 		    $("#topics").accordion({header:'h3', selectedClass:'selected'});
 	  	});
 	</script>
+
+	<script src="/static/jquery.curvycorners.source.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		$(function(){
+			$('div.splash').corner();
+			$('div.pullout').corner({ tl: false, bl: false });
+			// These cause the accordion to stop working at the moment
+			// $('div.pane').corner();
+			// $('#topics').corner();
+		});
+	</script>
 </head>
 <body>
 	
 <div id="outer-wrapper"><div id="inner-wrapper">
 
 
-<div id="nav">		
+<div id="nav">
 
 	<div id="search">
-		<input type="search" value="Search Documentation…" />
+		<input type="search" value="Search…" />
 	</div>
 	
 	<div id="user">
@@ -43,32 +54,20 @@
 	</ul>
 
 	<ul id="sub-nav" class="navigation">
-		<li><a href="">Getting Started</a></li
-		><li><a href="">Books</a></li
-		><li><a href="">Get Help</a></li>
+		<li><a href="" class="selected">Topics</a></li
+		><li><a href="">Demo Movies</a></li
+		><li><a href="">Frequently Asked Questions</a></li
+		><li><a href="">Error Reference</a></li
+		><li><a href=""><acronym title="Application Programming Interfaces">APIs</acronym></a></li
+		><li><a href="" style="color: #666">Recent Updates</a></li
+		>
 	</ul>
 
 </div>
 
 <div id="content-wrapper">
 
-	<div id="splash-pullout" class="pullout">
-		<h2>Get help</h2>
-
-		<p>Join our <a href="">chat room</a>, <a href="">forums</a> and more.
-
-		<ul>
-			<li><a href="">How to ask for help</a></li>
-			<li><a href="">Find training courses</a></li>
-			<li><a href="">Commercial support options</a></li>
-		</ul>
-		<ul>
-			<li><a href="">Frequently Asked Questions</a></li>
-			<li><a href="">Error Message Reference</a></li>
-		</ul>
-	</div>
-
-	<div id="splash" class="sub-splash">
+	<div class="splash" id="splash-documentation">
 
 		<h1>New to Plone? Start here!</h1>
 
@@ -78,37 +77,56 @@
 
 	</div>
 
-	<div id="sector-sidebar">
+	<div class="pullout">
+		<h2>Get help</h2>
+
+		<p>Join our <a href="">chat room</a>, <a href="">forums</a> and more.
+
+		<ul>
+			<li><a href="">How to ask for help</a></li>
+			<li><a href="">Find training courses</a></li>
+			<li><a href="">Commercial support options</a></li>
+		</ul>
+	</div>
+
+
+	<div class="sidebar">
 		<h2>Books on Plone</h2>
 
 		<ol>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" alt="" />
+				<img class="book-cover" src="/static/images/book.png" 
+				     height="81" width="61" alt="" />
 				<a href="">Professional Plone Development		</a>
 				The most recent Plone book. Covers building robust, content-centric web applications with Plone 3.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" alt="" />
+				<img class="book-cover" src="/static/images/book.png" 
+				     height="81" width="61" alt="" />
 				<a href="">Content Management with Plone: Handbook for Authors and Editors</a>
 				End-user guide for Plone, recently updated for Plone 3.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" alt="" />
+				<img class="book-cover" src="/static/images/book.png" 
+				     height="81" width="61" alt="" />
 				<a href="">Web Component Development with Zope 3</a>
 				Zope 3 development. Gives a lucid introduction to the Zope 3 technologies available to Plone.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" alt="" />
+				<img class="book-cover" src="/static/images/book.png" 
+				     height="81" width="61" alt="" />
 				<a href="">Plone Live							</a>
 				A thorough reference to the inner workings of Plone, covers Plone 2.5.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" alt="" />
+				<img class="book-cover" src="/static/images/book.png" 
+				     height="81" width="61" alt="" />
 				<a href="">The Definitive Guide to Plone		</a>
 				The first Plone book. Slightly outdated, but an excellent jumpstart guide for Plone.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" alt="" />
+				<img class="book-cover" src="/static/images/book.png" 
+				     height="81" width="61" alt="" />
 				<a href="" >Dive into Python					</a>
 				The de facto standard for learning Python development.
 			</li>
