--- a/new.plone.org/static/enterprise.html
+++ b/new.plone.org/static/enterprise.html
@@ -8,7 +8,17 @@
 	<style type="text/css" media="screen">
 		@import url("plone.css");
 	</style>
-	<script type="text/javascript" src="slider.js"></script>
+
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+
+	<script src="jquery.curvycorners.source.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		$(function(){
+			$('div.splash').corner();
+			$('div.pullout').corner({ tl: false, bl: false });
+		});
+	</script>
+
 </head>
 <body>
 <div id="outer-wrapper"><div id="inner-wrapper">
@@ -47,7 +57,16 @@
 
 <div id="content-wrapper">
 
-	<div id="splash-pullout">
+	<div class="splash">
+
+		<h1>Plone is the perfect CMS solution<br /> for Enterprise applications</h1>
+
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+		</p>
+
+	</div>
+
+	<div class="pullout">
 		<h1>Who’s using Plone in the Enterprise?</h1>
 		<ul>
 			<li><a href="">Novell</a></li>
@@ -56,22 +75,13 @@
 		</ul>
 	</div>
 
-	<div id="splash" class="sub-splash splash-enterprise">
-
-		<h1>Plone is the perfect CMS solution<br /> for Enterprise applications</h1>
-
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-		</p>
-
-	</div>
-
 
 
 	<div id="footer">
 		<a id="footer-logo"
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system">
-			<img alt="" src="images/footer-logo.png" />
+			<img alt="" src="/static/images/footer-logo.png" />
 		</a>
 		<div id="footer-text">
 			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
