--- a/new.plone.org/static/index.html
+++ b/new.plone.org/static/index.html
@@ -18,6 +18,14 @@
 	  	});
 	</script>
 
+	<!-- The front page image can't be rounded
+	<script src="jquery.curvycorners.source.js" type="text/javascript"></script>
+	<script type="text/javascript">
+		$(function(){
+			$('div.splash').corner();
+		});
+	</script> 
+	-->
 </head>
 <body>
 <div id="outer-wrapper"><div id="inner-wrapper">
@@ -48,7 +56,18 @@
 <div id="content-wrapper">
 
 
-	<div id="sector-sidebar">
+	<div class="splash" id="splash-frontpage">
+		<h1>What is Plone?</h1>
+
+		<h2>A Powerful, Productive &amp; Collaborative Content Management Solution</h2>
+
+		<p>Lorem ipsum…</p>
+
+		<p><a href="/for">Explore the possibilities</a></p>
+	</div>
+
+
+	<div class="sidebar">
 		<h1>What can Plone do for you?</h1>	  
 
 		<ul>
@@ -60,16 +79,6 @@
 			<li><a href="/for/science"	  >Science						</a></li>
 			<li><a href="/for/media"	  >Media &amp; Publishing	</a></li>
 		</ul>
-	</div>
-
-	<div id="splash" class="splash-frontpage">
-		<h1>What is Plone?</h1>
-
-		<h2>A Powerful, Productive &amp; Collaborative Content Management Solution</h2>
-
-		<p>Lorem ipsum…</p>
-
-		<p><a href="/for">Explore the possibilities</a></p>
 	</div>
 
 	
@@ -174,29 +183,33 @@
 		</ul>
 	</div>
 
-	<!-- The JS code for the accordion needs to be updated to be a bit less 
-		braindead and use h1/div instead of just divs. Leaving it as-is for now, 
-		to make sure it works :) ~limi 
-	-->
 	<div id="accordion">
 
 		<h2>Get Plone</h2>
 		<div>
-			<p class="discreet">Latest release:</p>
-			<p><strong>Plone 3.1.5 (Aug 2008)</strong></p>
-			<ul>
-				<li><a href="">What's new in Plone 3</a></li>
+			<img id="plone-boxed" src="/static/images/plone-boxed.png" height="123" width="74" alt="" />
+			<a id="download-link" href="/download">
+				DOWNLOAD NOW<br />
+				Plone 3.1.5 · Aug ’08
+			</a>
+			<dl>
+		 		<dt><a href="">What’s new in Plone 3</a></dt>
+				<dd>An overview of the new features.</dd>
+		 		<dt><a href="">Roadmap</a></dt>
+				<dd>What are our plans for the future?</dd>
+		 		<dt><a href="">Older releases</a></dt>
+				<dd>Looking for a previous release? </dd>
+		 		<dt><a href="">Add-on Products</a></dt>
+				<dd>Adapt Plone to your needs.</dd>
+			</dl>
+			<!-- <ul>
+				<li><a href="">What’s new in Plone 3</a></li>
 				<li><a href="">Roadmap</a></li>
 				<li><a href="">Older releases</a></li>
 				<li><a href="">Add-on Products</a></li>
-			</ul>			
+			</ul>			 -->
 
-			<img id="plone-boxed" src="/static/images/plone-boxed.png" height="123" width="74" alt="" />
 
-			<a id="download-link" href="/download">
-				DOWNLOAD NOW<br />
-				Plone 3.1.5
-			</a>
 		</div>	
 	
 		<h2>Learn Plone</h2>
