--- a/new.plone.org/static/index.html
+++ b/new.plone.org/static/index.html
@@ -31,7 +31,7 @@
 <div id="outer-wrapper"><div id="inner-wrapper">
 
 
-<div id="nav">		
+<div id="nav">
 
 	<div id="search">
 		<input type="search" value="Search this site…" />
@@ -71,13 +71,13 @@
 		<h1>What can Plone do for you?</h1>	  
 
 		<ul>
-			<li><a href="/for/smb"       >Small/Medium Business	</a></li>
-			<li><a href="enterprise.html">Enterprise					</a></li>
-			<li><a href="/for/nonprofits">Non-profits					</a></li>
-			<li><a href="/for/government">Government					</a></li>
-			<li><a href="/for/education" >Education					</a></li>
-			<li><a href="/for/science"	  >Science						</a></li>
-			<li><a href="/for/media"	  >Media &amp; Publishing	</a></li>
+			<li><a href="/for/smb"       >Small/Medium Business</a></li>
+			<li><a href="enterprise.html">Enterprise</a></li>
+			<li><a href="/for/nonprofits">Non-profits</a></li>
+			<li><a href="/for/government">Government</a></li>
+			<li><a href="/for/education" >Education</a></li>
+			<li><a href="/for/science"	  >Science</a></li>
+			<li><a href="/for/media"	  >Media &amp; Publishing</a></li>
 		</ul>
 	</div>
 
@@ -112,28 +112,16 @@
 		<h1>News</h1>
 		<ul>
 			<li>
-				<a href="">
-					Updated: Preliminary sessions for Plone Conference 2008 announced!
-					<span class="date">Jul 9, 2008</span>
-				</a>
+				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Jul 9, 2008</span></a>
 			</li>
 			<li class="even">
-				<a href="">
-					Updated: Preliminary sessions for Plone Conference 2008 announced!
-					<span class="date">Jul 9, 2008</span>
-				</a>
+				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Jul 9, 2008</span></a>
 			</li>
 			<li>
-				<a href="">
-					Updated: Preliminary sessions for Plone Conference 2008 announced!
-					<span class="date">Jul 9, 2008</span>
-				</a>
+				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Jul 9, 2008</span></a>
 			</li>
 			<li class="even">
-				<a href="">
-					Updated: Preliminary sessions for Plone Conference 2008 announced!
-					<span class="date">Jul 9, 2008</span>
-				</a>
+				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Jul 9, 2008</span></a>
 			</li>
 			<li>
 				<!-- More news… Submit news -->
@@ -145,40 +133,16 @@
 		<h1>Upcoming Events</h1>
 		<ul>
 			<li>
-				<a href="">
-					Plone at LinuxWorld SF
-					<span class="date">
-						Moscone Center, San Francisco, CA, <br />
-						Aug 5-7, 2008
-					</span>
-				</a>
+				<a href="">Plone at LinuxWorld SF <span class="date">Moscone Center, San Francisco, CA, <br />Aug 5-7, 2008</span></a>
 			</li>
 			<li class="even">
-				<a href="">
-					Updated: Preliminary sessions for Plone Conference 2008 announced!
-					<span class="date">
-						Freiburg im Breisgau, Germany, <br />
-						Aug 25-27, 2008
-					</span>
-				</a>
+				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
 			</li>
 			<li>
-				<a href="">
-					Updated: Preliminary sessions for Plone Conference 2008 announced!
-					<span class="date">
-						Freiburg im Breisgau, Germany, <br />
-						Aug 25-27, 2008
-					</span>
-				</a>
+				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
 			</li>
 			<li class="even">
-				<a href="">
-					Updated: Preliminary sessions for Plone Conference 2008 announced!
-					<span class="date">
-						Freiburg im Breisgau, Germany, <br />
-						Aug 25-27, 2008
-					</span>
-				</a>
+				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
 			</li>
 		</ul>
 	</div>
@@ -188,10 +152,7 @@
 		<h2>Get Plone</h2>
 		<div>
 			<img id="plone-boxed" src="/static/images/plone-boxed.png" height="123" width="74" alt="" />
-			<a id="download-link" href="/download">
-				DOWNLOAD NOW<br />
-				Plone 3.1.5 · Aug ’08
-			</a>
+			<a id="download-link" href="/download">DOWNLOAD NOW<br />Plone 3.1.5 · Aug ’08</a>
 			<dl>
 		 		<dt><a href="">What’s new in Plone 3</a></dt>
 				<dd>An overview of the new features.</dd>
@@ -236,7 +197,7 @@
 		<div>
 	    	<dl>
 	        	<dt><a href="http://dev.plone.org/plone">Suggest New Features</a></dt>
-				<dd>Have an awesome idea about a new feature for Plone? Suggest it here!
+				<dd>Have an awesome idea about a new feature for Plone? Suggest it here!</dd>
 
 	        	<dt><a href="http://dev.plone.org/plone">Report Bugs</a></dt>
 				<dd>Plone has no bugs. If you found one anyway, report it here.</dd>
