Remove explicit /static
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22330

--- a/new.plone.org/static/index.html
+++ b/new.plone.org/static/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>plone.org redesign prototype</title>
 	<style type="text/css" media="screen">
-		@import url("/static/plone.css");
+		@import url("plone.css");
 	</style>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
@@ -50,7 +50,7 @@
 		><li><a href="support.html">Support</a></li>
 	</ul>
 
-	<img alt="Plone" id="logo" height="56" width="216" src="/static/images/plone-logo-56.png" />
+	<img alt="Plone" id="logo" height="56" width="216" src="images/plone-logo-56.png" />
 </div>
 
 <div id="content-wrapper">
@@ -84,7 +84,7 @@
 	
 	<div id="current" class="box">
 		<h1>Plone Conference 2008</h1>
-		<p><img alt="" height="143" width="205" src="/static/images/ploneconf.png" /></p>
+		<p><img alt="" height="143" width="205" src="images/ploneconf.png" /></p>
 		<p>
 			<a href="http://ploneconf2008.eventbrite.com/">Early Bird Registration Now Open!</a>
 		</p>
@@ -151,7 +151,7 @@
 
 		<h2>Get Plone</h2>
 		<div>
-			<img id="plone-boxed" src="/static/images/plone-boxed.png" height="123" width="74" alt="" />
+			<img id="plone-boxed" src="images/plone-boxed.png" height="123" width="74" alt="" />
 			<a id="download-link" href="/download">DOWNLOAD NOW<br />Plone 3.1.5 · Aug ’08</a>
 			<dl>
 		 		<dt><a href="">What’s new in Plone 3</a></dt>
@@ -222,7 +222,7 @@
 		<a id="footer-logo"
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system">
-			<img alt="" src="/static/images/footer-logo.png" />
+			<img alt="" src="images/footer-logo.png" />
 		</a>
 		<div id="footer-text">
 			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
