--- a/new.plone.org/static/documentation.html
+++ b/new.plone.org/static/documentation.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>plone.org redesign prototype</title>
 	<style type="text/css" media="screen">
-		@import url("/static/plone.css");
+		@import url("plone.css");
 	</style>
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
@@ -18,7 +18,7 @@
 	  	});
 	</script>
 
-	<script src="/static/jquery.curvycorners.source.js" type="text/javascript"></script>
+	<script src="jquery.curvycorners.source.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		$(function(){
 			$('div.splash').corner();
@@ -95,37 +95,37 @@
 
 		<ol>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" 
+				<img class="book-cover" src="images/book.png" 
 				     height="81" width="61" alt="" />
 				<a href="">Professional Plone Development		</a>
 				The most recent Plone book. Covers building robust, content-centric web applications with Plone 3.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" 
+				<img class="book-cover" src="images/book.png" 
 				     height="81" width="61" alt="" />
 				<a href="">Content Management with Plone: Handbook for Authors and Editors</a>
 				End-user guide for Plone, recently updated for Plone 3.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" 
+				<img class="book-cover" src="images/book.png" 
 				     height="81" width="61" alt="" />
 				<a href="">Web Component Development with Zope 3</a>
 				Zope 3 development. Gives a lucid introduction to the Zope 3 technologies available to Plone.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" 
+				<img class="book-cover" src="images/book.png" 
 				     height="81" width="61" alt="" />
 				<a href="">Plone Live							</a>
 				A thorough reference to the inner workings of Plone, covers Plone 2.5.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" 
+				<img class="book-cover" src="images/book.png" 
 				     height="81" width="61" alt="" />
 				<a href="">The Definitive Guide to Plone		</a>
 				The first Plone book. Slightly outdated, but an excellent jumpstart guide for Plone.
 			</li>
 			<li>
-				<img class="book-cover" src="/static/images/book.png" 
+				<img class="book-cover" src="images/book.png" 
 				     height="81" width="61" alt="" />
 				<a href="" >Dive into Python					</a>
 				The de facto standard for learning Python development.
@@ -563,7 +563,7 @@
 		<a id="footer-logo"
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system">
-			<img alt="" src="/static/images/footer-logo.png" />
+			<img alt="" src="images/footer-logo.png" />
 		</a>
 		<div id="footer-text">
 			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
