Removing all references to /static now that Martin added a filter to handle it automatically.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22332

--- a/new.plone.org/static/blank.html
+++ b/new.plone.org/static/blank.html
@@ -46,7 +46,7 @@
 		<a id="footer-logo"
 		   href="http://plone.org" 
 		   title="Plone CMS, the open source content management system">
-			<img alt="" src="/static/images/footer-logo.png" />
+			<img alt="" src="images/footer-logo.png" />
 		</a>
 		<div id="footer-text">
 			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
