added new stylesheet for IE specific fixes and added stylesheet's import to HTML
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=22806

--- a/new.plone.org/static/blank.html
+++ b/new.plone.org/static/blank.html
@@ -8,6 +8,9 @@
 	<style type="text/css" media="screen">
 		@import url("plone.css");
 	</style>
+	<!--[if IE]>
+        <style type="text/css" media="all">@import url(ie.css);</style>
+    <![endif]-->
 </head>
 <body>
 <div id="outer-wrapper"><div id="inner-wrapper">
