--- a/new.plone.org/static/enterprise.html
+++ b/new.plone.org/static/enterprise.html
@@ -8,6 +8,9 @@
 	<style type="text/css" media="screen">
 		@import url("plone.css");
 	</style>
+	<!--[if IE]>
+        <style type="text/css" media="all">@import url(ie.css);</style>
+    <![endif]-->	
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 
