--- a/new.plone.org/static/developers.html
+++ b/new.plone.org/static/developers.html
@@ -8,6 +8,9 @@
 	<style type="text/css" media="screen">
 		@import url("plone.css");
 	</style>
+	<!--[if IE]>
+        <style type="text/css" media="all">@import url(ie.css);</style>
+    <![endif]-->	
 	<script type="text/javascript" src="slider.js"></script>
 </head>
 <body>
