--- a/new.plone.org/static/documentation.html
+++ b/new.plone.org/static/documentation.html
@@ -8,6 +8,9 @@
 	<style type="text/css" media="screen">
 		@import url("plone.css");
 	</style>
+	<!--[if IE]>
+        <style type="text/css" media="all">@import url(ie.css);</style>
+    <![endif]-->	
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.5.2/jquery-ui.min.js" type="text/javascript"></script>
