--- a/new.plone.org/static/index.html
+++ b/new.plone.org/static/index.html
@@ -7,6 +7,7 @@
 	<title>plone.org redesign prototype</title>
 	<style type="text/css" media="screen">
 		@import url("plone.css");
+		@import url("authoring.css");
 	</style>
 	<!--[if IE]>
         <style type="text/css" media="all">@import url(ie.css);</style>
@@ -71,175 +72,15 @@
     <div id="edit-menu" />
 </div>
 
-
 <div id="content-wrapper">
+    <div id="content">
 
-    <div id="logo-wrapper">
-        <a href="."><img alt="Plone" id="logo" height="56" width="216" src="images/plone-logo-56.png" /></a>
+    	<h1>Content goes here</h1>
+
+    	<p>Lorem ipsum…</p>
+
     </div>
-
-
-	<div class="splash" id="splash-frontpage">
-		<h1>What is Plone?</h1>
-
-		<h2>A Powerful, Productive &amp; Collaborative Content Management Solution</h2>
-
-		<p>Lorem ipsum…</p>
-
-		<p><a href="/for">Explore the possibilities</a></p>
-	</div>
-
-
-	<div class="sidebar">
-		<h1>What can Plone do for you?</h1>	  
-
-		<ul>
-			<li><a href="/for/smb"       >Small/Medium Business</a></li>
-			<li><a href="enterprise.html">Enterprise</a></li>
-			<li><a href="/for/nonprofits">Non-profits</a></li>
-			<li><a href="/for/government">Government</a></li>
-			<li><a href="/for/education" >Education</a></li>
-			<li><a href="/for/science"	  >Science</a></li>
-			<li><a href="/for/media"	  >Media &amp; Publishing</a></li>
-		</ul>
-	</div>
-
-	
-	<div id="current" class="box">
-		<h1>Plone Conference 2008</h1>
-		<p><img alt="" height="143" width="205" src="images/ploneconf.png" /></p>
-		<p>
-			<a href="http://ploneconf2008.eventbrite.com/">Early Bird Registration Now Open!</a>
-		</p>
-		<p>
-			<strong>Training, Oct 6-7:</strong> 
-			<a href="http://plone.org/events/conferences/2008-washington-dc/pre-conference-training/">Information and registration</a>
-		</p>
-		<p>
-			<strong>Conference, Oct 8-10:</strong> 
-			<a href="http://ploneconf2008.eventbrite.com/">Registration</a> 
-			<a href="http://plone.org/events/conferences/2008-washington-dc/call-for-session-proposals">Call for proposals</a>
-		</p>
-		<p>
-			<strong>Sprints/Workshops, Oct 11-12:</strong> 
-			<a href="http://www.openplans.org/projects/plone-conference-2008-dc/sprint">Information</a>
-		</p>
-		<p>
-			<strong>General Info:</strong> 
-			<a href="http://plone.org/events/conferences/2008-washington-dc/logistics/accommodations">Hotels</a> 
-			<a href="http://plone.org/events/conferences/2008-washington-dc/logistics/travel">Travel</a>
-		</p>
-	</div>
-
-	<div id="news" class="box">
-		<h1>News</h1>
-		<ul>
-			<li>
-				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Jul 9, 2008</span></a>
-			</li>
-			<li class="even">
-				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Jul 9, 2008</span></a>
-			</li>
-			<li>
-				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Jul 9, 2008</span></a>
-			</li>
-			<li class="even">
-				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Jul 9, 2008</span></a>
-			</li>
-			<li>
-				<!-- More news… Submit news -->
-			</li>
-		</ul>
-	</div>
-
-	<div id="events" class="box">
-		<h1>Upcoming Events</h1>
-		<ul>
-			<li>
-				<a href="">Plone at LinuxWorld SF <span class="date">Moscone Center, San Francisco, CA, <br />Aug 5-7, 2008</span></a>
-			</li>
-			<li class="even">
-				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
-			</li>
-			<li>
-				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
-			</li>
-			<li class="even">
-				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
-			</li>
-		</ul>
-	</div>
-
-	<div id="accordion">
-
-		<h2>Get Plone</h2>
-		<div>
-			<img id="plone-boxed" src="images/plone-boxed.png" height="123" width="74" alt="" />
-			<a id="download-link" href="/download">DOWNLOAD NOW<br />Plone 3.1.5 · Aug ’08</a>
-			<dl>
-		 		<dt><a href="">What’s new in Plone 3</a></dt>
-				<dd>An overview of the new features.</dd>
-		 		<dt><a href="">Roadmap</a></dt>
-				<dd>What are our plans for the future?</dd>
-		 		<dt><a href="">Older releases</a></dt>
-				<dd>Looking for a previous release? </dd>
-		 		<dt><a href="">Add-on Products</a></dt>
-				<dd>Adapt Plone to your needs.</dd>
-			</dl>
-			<!-- <ul>
-				<li><a href="">What’s new in Plone 3</a></li>
-				<li><a href="">Roadmap</a></li>
-				<li><a href="">Older releases</a></li>
-				<li><a href="">Add-on Products</a></li>
-			</ul>			 -->
-
-
-		</div>	
-	
-		<h2>Learn Plone</h2>
-		<div>
-			<dl>
-		 		<dt><a href="/documentation">Documentation</a></dt>
-				<dd>Plone has a great collection of online documentation.</dd>
-				
-		      <dt><a href="/documentation/books">Buy Books</a></dt>
-				<dd>For those of you who think better in bed with a book.</dd>
-				
-		      <dt><a href="/support">Forums &amp; Chat Rooms</a></dt>
-				<dd>People are always ready to help you with your Plone questions.</dd>
-
-		      <dt><a href="/events/training">Find Plone Training</a></dt>
-				<dd>Let one of the Plone experts guide you through getting productive.</dd>
-
-		      <dt><a class="link-plain" href="http://plone.net">Commercial Support</a></dt>
-				<dd>Over 250 companies around the world offer Plone services.</dd>
-			</dl>
-		</div>
-	
-		<h2>Get Involved</h2>
-		<div>
-	    	<dl>
-	        	<dt><a href="http://dev.plone.org/plone">Suggest New Features</a></dt>
-				<dd>Have an awesome idea about a new feature for Plone? Suggest it here!</dd>
-
-	        	<dt><a href="http://dev.plone.org/plone">Report Bugs</a></dt>
-				<dd>Plone has no bugs. If you found one anyway, report it here.</dd>
-
-	        	<dt><a href="/development/code">Write Code</a></dt>
-				<dd>If you’re proficient in Python, XHTML, CSS or Javascript, we want your help!</dd>
-
-	        	<dt><a href="/about/contributing">Translate, Write Docs, Help Test</a></dt>
-				<dd>Even if you’re not a programmer, there are lots of things you can help with to make Plone better.</dd>
-
-	        	<dt><a href="http://planet.plone.org">Read Blogs, Publish Yours</a></dt>
-				<dd>Stay up to date on the cutting edge of Plone development.</dd>
-
-	        	<dt><a href="/foundation">Support the Plone Foundation</a></dt>
-				<dd>If all else fails, give cold, hard cash.</dd>
-	    	</dl>
-		</div>
-
-	</div>
+</div>
 
 	<div id="footer">
 		<a id="footer-logo"
@@ -253,7 +94,7 @@
 		</div>
 	</div>	
 
-</div>
+
 
 </div></div>
 </body>
