--- a/new.plone.org/static/frontpage.html
+++ b/new.plone.org/static/frontpage.html
@@ -156,7 +156,7 @@
 				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
 			</li>
 			<li>
-				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
+				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
 			</li>
 			<li class="even">
 				<a href="">Updated: Preliminary sessions for Plone Conference 2008 announced!<span class="date">Freiburg im Breisgau, Germany, <br />Aug 25-27, 2008</span></a>
