Replacing Plone Conference section with Plone by Numbers
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23203

--- a/new.plone.org/static/frontpage.html
+++ b/new.plone.org/static/frontpage.html
@@ -100,29 +100,13 @@
 
 	
 	<div id="current" class="box">
-		<h1>Plone Conference 2008</h1>
-		<p><img alt="" height="143" width="205" src="images/ploneconf.png" /></p>
-		<p>
-			<a href="http://ploneconf2008.eventbrite.com/">Early Bird Registration Now Open!</a>
-		</p>
-		<p>
-			<strong>Training, Oct 6-7:</strong> 
-			<a href="http://plone.org/events/conferences/2008-washington-dc/pre-conference-training/">Information and registration</a>
-		</p>
-		<p>
-			<strong>Conference, Oct 8-10:</strong> 
-			<a href="http://ploneconf2008.eventbrite.com/">Registration</a> 
-			<a href="http://plone.org/events/conferences/2008-washington-dc/call-for-session-proposals">Call for proposals</a>
-		</p>
-		<p>
-			<strong>Sprints/Workshops, Oct 11-12:</strong> 
-			<a href="http://www.openplans.org/projects/plone-conference-2008-dc/sprint">Information</a>
-		</p>
-		<p>
-			<strong>General Info:</strong> 
-			<a href="http://plone.org/events/conferences/2008-washington-dc/logistics/accommodations">Hotels</a> 
-			<a href="http://plone.org/events/conferences/2008-washington-dc/logistics/travel">Travel</a>
-		</p>
+		<h1>Plone by Numbers</h1>
+        <ul>
+            <li>Top 2% open source project</li>
+            <li>Over 200 core developers</li>
+            <li>300+ solution providers in 40+ countries</li>
+            <li>8 years of real-life experience</li>
+        </ul>
 	</div>
 
 	<div id="news" class="box">
