New footer approach, no longer has to live inside the content area.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23204

--- a/new.plone.org/static/developers.html
+++ b/new.plone.org/static/developers.html
@@ -86,22 +86,21 @@
 
 </div> <!-- End #content -->
 
-
-	<div id="footer">
-		<a id="footer-logo"
-		   href="http://plone.org" 
-		   title="Plone CMS, the open source content management system">
-			<img alt="" src="images/footer-logo.png" />
-		</a>
-		<div id="footer-text">
-			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
-			<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of the Plone Foundation. Distributed under the GNU GPL license.</p>
-		</div>
-	</div>	
-
-
 </div>
 
-</div></div>
+</div></div> <!-- end inner/outer-wrapper -->
+
+<div id="footer">
+	<a id="footer-logo"
+	   href="http://plone.org" 
+	   title="Plone CMS, the open source content management system">
+		<img alt="" src="images/footer-logo.png" />
+	</a>
+	<div id="footer-text">
+		<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
+		<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of the Plone Foundation. Distributed under the GNU GPL license.</p>
+	</div>
+</div>
+
 </body>
 </html>
