Removing JS corners, using border-radius for everything, download page updates.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23206

--- a/new.plone.org/static/documentation.html
+++ b/new.plone.org/static/documentation.html
@@ -17,20 +17,10 @@
 
 	<script type="text/javascript">
 		$(document).ready(function(){
-		    $("#topics").accordion({header:'h3', selectedClass:'selected'});
+		    $("#categories").accordion({header:'h3', selectedClass:'selected'});
 	  	});
 	</script>
 
-	<script src="jquery.curvycorners.source.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(function(){
-			$('div.splash').corner();
-			$('div.pullout').corner({ tl: false, bl: false });
-			// These cause the accordion to stop working at the moment
-			// $('div.pane').corner();
-			// $('#topics').corner();
-		});
-	</script>
 </head>
 <body>
 	
@@ -83,7 +73,7 @@
 	<div class="pullout">
 		<h2>Get help</h2>
 
-		<p>Join our <a href="">chat room</a>, <a href="">forums</a> and more.
+		<p>Visit our <a href="">chat room</a>, <a href="">forums</a> and more.
 
 		<ul>
 			<li><a href="">How to ask for help</a></li>
@@ -94,7 +84,7 @@
 
 
 	<div class="sidebar">
-		<h2>Books on Plone</h2>
+		<h2>Recommended Books</h2>
 
 		<ol>
 			<li>
@@ -149,7 +139,7 @@
 
 		<h1>Documentation <a href="" class="versions">for Plone 3 ▼</a></h1>
 
-		<div class="" id="topics">
+		<div class="" id="categories">
 			<h2>Find documentation by topic</h2>
 	
 			<h3><a href="">Basic Use (29)</a></h3>
