--- a/new.plone.org/static/downloads.html
+++ b/new.plone.org/static/downloads.html
@@ -21,16 +21,6 @@
 	  	});
 	</script>
 
-	<script src="jquery.curvycorners.source.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(function(){
-			$('div.splash').corner();
-			$('div.pullout').corner({ tl: false, bl: false });
-			// These cause the accordion to stop working at the moment
-			// $('div.pane').corner();
-			// $('#topics').corner();
-		});
-	</script>
 </head>
 <body>
 	
@@ -60,7 +50,7 @@
 
 <div id="content-wrapper">
 
-	<div class="splash" id="splash-documentation">
+	<div class="splash" id="splash-downloads">
 		
 		<div id="plone-box"></div>
 
@@ -107,23 +97,13 @@
 		
 		<div id="sort-by"><span class="sort">Sort by:</span><a href="" class="plain">Most recent</span>&nbsp;<a href="" class="selected">Most popular</a></div>
 
-		<div class="" id="categories">		
+		<div class="" id="categories">
 			
 			<span class="advice">Make sure you have Plone installed before downloading the add-ons and ensure you are using add-ons that have been certified for use with your particular version.</span>
-			<span class="rss-icon"><img alt="" src="images/rss-icon.png" /></span>
 			
 			<h2>All Categories</h2>
 			
-			<div id="numreleases">809 releases matching your criteria, sorted with most recent releases first
-			<span class="next-previous">
-					<a href="previous" class="next-previous-item">previous</a>&nbsp;|&nbsp;
-					<a href="page01" class="next-previous-item">1</a>&nbsp;|&nbsp;
-					<a href="page02" class="next-previous-item">2</a>&nbsp;|&nbsp;
-					<a href="page03" class="next-previous-item">3</a>&nbsp;|&nbsp;
-					<a href="page04" class="next-previous-item">4</a>&nbsp;|&nbsp;
-					<a href="" class="next-previous-item">next</a>
-			</span>
-			</div>
+			<div id="numreleases">809 releases matching your criteria, sorted with most recent releases first.</div>
 			
 			<ul class="downloads">
 			  <li>
