--- a/new.plone.org/static/enterprise.html
+++ b/new.plone.org/static/enterprise.html
@@ -14,14 +14,6 @@
 
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
 
-	<script src="jquery.curvycorners.source.js" type="text/javascript"></script>
-	<script type="text/javascript">
-		$(function(){
-			$('div.splash').corner();
-			$('div.pullout').corner({ tl: false, bl: false });
-		});
-	</script>
-
 </head>
 <body>
 <div id="outer-wrapper"><div id="inner-wrapper">
@@ -78,22 +70,23 @@
 		</ul>
 	</div>
 
-
-
-	<div id="footer">
-		<a id="footer-logo"
-		   href="http://plone.org" 
-		   title="Plone CMS, the open source content management system">
-			<img alt="" src="images/footer-logo.png" />
-		</a>
-		<div id="footer-text">
-			<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
-			<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of the Plone Foundation. Distributed under the GNU GPL license.</p>
-		</div>
-	</div>	
+	<div style="clear: both"></div>
 
 </div>
 
-</div></div>
+</div></div> <!-- end inner/outer-wrapper -->
+
+<div id="footer">
+	<a id="footer-logo"
+	   href="http://plone.org" 
+	   title="Plone CMS, the open source content management system">
+		<img alt="" src="images/footer-logo.png" />
+	</a>
+	<div id="footer-text">
+		<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
+		<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of the Plone Foundation. Distributed under the GNU GPL license.</p>
+	</div>
+</div>
+
 </body>
 </html>
