--- a/new.plone.org/static/index.html
+++ b/new.plone.org/static/index.html
@@ -12,7 +12,7 @@
         <style type="text/css" media="all">@import url(ie.css);</style>
     <![endif]-->	
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script>
+	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script> -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.5.2/jquery-ui.min.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
