Adding Trac sub-nav, adjusting top-level links.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23243

--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -38,11 +38,21 @@
 	
 	<ul id="main-nav" class="navigation">
 		<li><a href=".">Home</a></li
-		><li><a href="downloads.html">Downloads</a></li
-		><li><a href="documentation.html">Documentation</a></li
-		><li><a href="developers.html">Developers</a></li
-		><li><a href="foundation.html">Plone&nbsp;Foundation</a></li
-		><li><a href="support.html">Support</a></li>
+		><li><a href="/downloads">Downloads</a></li
+		><li><a href="/documentation">Documentation</a></li
+		><li><a class="selected" href="/developers">Developers</a></li
+		><li><a href="/foundation">Plone&nbsp;Foundation</a></li
+		><li><a href="/support">Support</a></li>
+	</ul>
+
+	<ul id="sub-nav" class="navigation">
+		<li><a href="" class="selected">Topics</a></li
+		><li><a href="">Demo Movies</a></li
+		><li><a href="">Frequently Asked Questions</a></li
+		><li><a href="">Error Reference</a></li
+		><li><a href=""><acronym title="Application Programming Interfaces">APIs</acronym></a></li
+		><li><a href="" style="color: #666">Recent Updates</a></li
+		>
 	</ul>
 
 </div>
