--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -40,7 +40,7 @@
 		<li><a href=".">Home</a></li
 		><li><a href="/downloads">Downloads</a></li
 		><li><a href="/documentation">Documentation</a></li
-		><li><a class="selected" href="/developers">Developers</a></li
+		><li><a class="selected" href="/development">Developers</a></li
 		><li><a href="/foundation">Plone&nbsp;Foundation</a></li
 		><li><a href="/support">Support</a></li>
 	</ul>
