--- a/new.plone.org/static/originals/foundation.html
+++ b/new.plone.org/static/originals/foundation.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>plone.org redesign prototype</title>
 	<style type="text/css" media="screen">
-		@import url("plone.css");
+		@import url("../plone.css");
 	</style>
 	<!--[if IE]>
         <style type="text/css" media="all">@import url(ie.css);</style>
