--- a/new.plone.org/static/originals/frontpage.html
+++ b/new.plone.org/static/originals/frontpage.html
@@ -61,7 +61,7 @@
 <div id="content-wrapper">
 
     <div id="logo-wrapper">
-        <a href="."><img alt="Plone" id="logo" height="56" width="216" src="images/plone-logo-56.png" /></a>
+        <a href="."><img alt="Plone" id="logo" height="56" width="216" src="../images/plone-logo-56.png" /></a>
     </div>
 
 
@@ -144,7 +144,7 @@
 
 		<h2>Get Plone</h2>
 		<div>
-			<img id="plone-boxed" src="images/plone-boxed.png" height="123" width="74" alt="" />
+			<img id="plone-boxed" src="../images/plone-boxed.png" height="123" width="74" alt="" />
 			<a id="download-link" href="/download">DOWNLOAD NOW<br />Plone 3.1.5 · Aug ’08</a>
 			<dl>
 		 		<dt><a href="">What’s new in Plone 3</a></dt>
@@ -221,7 +221,7 @@
 	<a id="footer-logo"
 	   href="http://plone.org" 
 	   title="Plone CMS, the open source content management system">
-		<img alt="" src="images/footer-logo.png" />
+		<img alt="" src="../images/footer-logo.png" />
 	</a>
 	<div id="footer-text">
 		<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
