Updates to the Plone by Numbers page, frontpage and documentation page adjustments.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23848

--- a/new.plone.org/static/originals/documentation.html
+++ b/new.plone.org/static/originals/documentation.html
@@ -71,6 +71,10 @@
 	</div>
 
 	<div class="pullout">
+		<a class="close-panel"
+		   href=""
+		   style="float: right; display: block; margin-top: -1em"
+		   title="Close this panel">&times;</a>
 		<h2>Get help</h2>
 
 		<p>Visit our <a href="">chat room</a>, <a href="">forums</a> and more.
@@ -90,14 +94,26 @@
 			<li>
 				<img class="book-cover" src="../images/book.png" 
 				     height="81" width="61" alt="" />
-				<a href="">Professional Plone Development		</a>
+				<a href="">Content Management with Plone: Handbook for Authors and Editors</a>
+				End-user guide for Plone, recently updated for Plone 3.
+			</li>
+			<li>
+				<img class="book-cover" src="../images/book.png" 
+				     height="81" width="61" alt="" />
+				<a href="">Practical Plone</a>
 				The most recent Plone book. Covers building robust, content-centric web applications with Plone 3.
 			</li>
 			<li>
 				<img class="book-cover" src="../images/book.png" 
 				     height="81" width="61" alt="" />
-				<a href="">Content Management with Plone: Handbook for Authors and Editors</a>
-				End-user guide for Plone, recently updated for Plone 3.
+				<a href="">Theming Plone</a>
+				A guide to getting the most from Plone's theming system.
+			</li>
+			<li>
+				<img class="book-cover" src="../images/book.png" 
+				     height="81" width="61" alt="" />
+				<a href="">Professional Plone Development</a>
+				The most recent Plone book. Covers building robust, content-centric web applications with Plone 3.
 			</li>
 			<li>
 				<img class="book-cover" src="../images/book.png" 
@@ -108,20 +124,20 @@
 			<li>
 				<img class="book-cover" src="../images/book.png" 
 				     height="81" width="61" alt="" />
-				<a href="">Plone Live							</a>
-				A thorough reference to the inner workings of Plone, covers Plone 2.5.
-			</li>
-			<li>
-				<img class="book-cover" src="../images/book.png" 
-				     height="81" width="61" alt="" />
-				<a href="">The Definitive Guide to Plone		</a>
-				The first Plone book. Slightly outdated, but an excellent jumpstart guide for Plone.
-			</li>
-			<li>
-				<img class="book-cover" src="../images/book.png" 
-				     height="81" width="61" alt="" />
 				<a href="" >Dive into Python					</a>
 				The de facto standard for learning Python development.
+			</li>
+			<li>
+				<img class="book-cover" src="../images/book.png" 
+				     height="81" width="61" alt="" />
+				<a href="" >Expert Python Programming</a>
+				For the Python programmer who have mastered the basics.
+			</li>
+			<li>
+				<img class="book-cover" src="../images/book.png" 
+				     height="81" width="61" alt="" />
+				<a href="" >Learning jQuery</a>
+				A great guide to the Javascript framework used in Plone.
 			</li>
 		</ol>
 
