--- a/new.plone.org/static/originals/frontpage.html
+++ b/new.plone.org/static/originals/frontpage.html
@@ -85,8 +85,9 @@
 			<li><a href="/for/nonprofits">Non-profits</a></li>
 			<li><a href="/for/government">Government</a></li>
 			<li><a href="/for/education" >Education</a></li>
-			<li><a href="/for/science"	  >Science</a></li>
-			<li><a href="/for/media"	  >Media &amp; Publishing</a></li>
+			<li><a href="/for/science"   >Science</a></li>
+			<li><a href="/for/media"     >Media &amp; Publishing</a></li>
+			<!-- <li><a href="/for/science"   >Developers</a></li> -->
 		</ul>
 	</div>
 
@@ -94,10 +95,19 @@
 	<div id="current" class="box">
 		<h1>Plone by Numbers</h1>
         <ul>
-            <li>Top 2% open source project</li>
-            <li>Over 200 core developers</li>
-            <li>300+ solution providers in 40+ countries</li>
-            <li>8 years of real-life experience</li>
+	        <li class="spotlight">
+				Plone is one of the <strong>top 2%</strong> open source projects
+				in the world,
+				with over <strong>200 core developers</strong> and over
+				<strong>250 solution providers</strong> 
+				in more than <strong>50 countries</strong>.
+				The project has existed <strong>since 1999</strong>,
+				is translated to <strong>40 languages</strong>,
+				and has the <strong>best security</strong> track record
+				of any major CMS. 
+				It is owned by the Plone Foundation, a 
+				<strong>501(c)(3) not-for-profit</strong> organization.
+			</li>
         </ul>
 	</div>
 
