--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -50,14 +50,14 @@
 
 
 <div id="edit-bar">
-	<div id="action-menu" />
-    <div id="edit-menu" />
+	<div id="action-menu"></div>
+	<div id="edit-menu"></div>
 </div>
 
 
 
 <div id="content-wrapper">
-    <div id="content">
+	<div id="content">
 
     	<h1>Content goes here</h1>
 
@@ -68,8 +68,9 @@
 
 </div></div> <!-- end inner/outer-wrapper -->
 
+
 <div id="footer">
-	<a id="footer-logo"
+	<a id="footer-logo" 
 	   href="http://plone.org" 
 	   title="Plone CMS, the open source content management system">
 		<img alt="" src="images/footer-logo.png" />
