--- a/new.plone.org/static/originals/frontpage.html
+++ b/new.plone.org/static/originals/frontpage.html
@@ -107,6 +107,15 @@
 				of any major CMS. 
 				It is owned by the Plone Foundation, a 
 				<strong>501(c)(3) not-for-profit</strong> organization.
+				<div class="sources" style="font-size: 11px">
+				Sources: 
+				<a href="http://cve.mitre.org/" style="display: inline" title="Common Vulnerabilities and Exposures (CVE)"
+				>CVE</a> and
+				<a href="http://www.ohloh.net/" style="display: inline" title="Ohloh, the open source network"
+				>Ohloh</a>.
+				</span>
+			</li>
+			<li>
 			</li>
         </ul>
 	</div>
