Converting all the layouts to use our new grid layout system. This is officially awesome. :)
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23861

--- a/new.plone.org/static/originals/enterprise.html
+++ b/new.plone.org/static/originals/enterprise.html
@@ -52,22 +52,28 @@
 
 <div id="content-wrapper">
 
-	<div class="splash">
+	<div class="grid-row">
+		<div class="grid-cell position-two-thirds width-third">
+			<div class="pullout">
+				<h1>Who’s using Plone in the Enterprise?</h1>
+				<ul>
+					<li><a href="">Novell</a></li>
+					<li><a href="">Akamai</a></li>
+					<li><a href="">Trolltech</a></li>
+				</ul>
+			</div>
+		</div>
+		
+		<div class="grid-cell position-leftmost width-two-thirds">
+			<div class="splash" id="splash-enterprise">
 
-		<h1>Plone is the perfect CMS solution<br /> for Enterprise applications</h1>
+				<h1>Plone is the perfect CMS solution<br /> for Enterprise applications</h1>
 
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-		</p>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+				</p>
 
-	</div>
-
-	<div class="pullout">
-		<h1>Who’s using Plone in the Enterprise?</h1>
-		<ul>
-			<li><a href="">Novell</a></li>
-			<li><a href="">Akamai</a></li>
-			<li><a href="">Trolltech</a></li>
-		</ul>
+			</div>
+		</div>
 	</div>
 
 	<div style="clear: both"></div>
