--- a/new.plone.org/static/originals/downloads.html
+++ b/new.plone.org/static/originals/downloads.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>plone.org redesign prototype</title>
 	<style type="text/css" media="screen">
-		@import url("plone.css");
+		@import url("../plone.css");
 	</style>
 	<!--[if IE]>
         <style type="text/css" media="all">@import url(ie.css);</style>
@@ -50,103 +50,101 @@
 
 <div id="content-wrapper">
 
-	<div class="splash" id="splash-downloads">
-		
-		<div id="plone-box"></div>
-
-		<h1>Get Plone for Your Platform</h1>
-
-		<p>Latest release: Plone 3.1.6 (October 2008)</p>
-		<div id="download-plone">
-			<div id="download-plone-hdr"></div>
-		</div>
-	</div>
-
-	<div class="pullout">
-		<h2>Plone Add Ons!</h2>
-		<p>Add-on products available for Plone - currently listing 850 projects with 2218 releases</p>
-		<h3>Submit your add-ons</h3>
-		<span class="list-your-addon"><img alt="" src="images/list-your-addon.png" /></span>
-	</div>
-
-
-	<div class="sidebar">
-		<h2 class="add-on-categories-hdr">Add On Categories</h2>
-		<span class="down-arrow">&darr;</span>
-
-		<ol id="add-on-categories">
-			<li>All categories</li>
-			<li><a href="">Plone releases</a></li>
-			<li><a href="">Themes</a></li>
-			<li><a href="">Theming Tools</a></li>
-			<li>...etc. </li>
-		</ol>
-
-	</div>
-
-
-	<div class="pane">
-
- 		<h1>Add on Product Releases <a href="" class="versions">for Plone 3 ▼</a></h1>
-
-		<div class="downloadssearch">
-			<input type="search" value="Search Downloads…" size="25" />
-			&nbsp;
-			<a href="">Advanced search</a>
+	<div class="grid-row">
+		<div class="grid-cell position-two-thirds width-third">
+			<div class="pullout">
+				<h2>Plone Add-ons!</h2>
+				<p>Add-ons extend your Plone site with additional functionality. Currently there are 850 projects with a total of 2218 releases available.</p>
+				<h3>Submit your add-ons</h3>
+				<span class="list-your-addon"><img alt="" src="../images/list-your-addon.png" /></span>
+			</div>
 		</div>
 		
-		<div id="sort-by"><span class="sort">Sort by:</span><a href="" class="plain">Most recent</span>&nbsp;<a href="" class="selected">Most popular</a></div>
+		<div class="grid-cell position-leftmost width-two-thirds">
+			<div class="splash" id="splash-downloads">
+	
+				<h1>Get Plone for Your Platform</h1>
 
-		<div class="" id="categories">
-			
-			<span class="advice">Make sure you have Plone installed before downloading the add-ons and ensure you are using add-ons that have been certified for use with your particular version.</span>
-			
-			<h2>All Categories</h2>
-			
-			<div id="numreleases">809 releases matching your criteria, sorted with most recent releases first.</div>
-			
-			<ul class="downloads">
-			  <li>
-			    <h3><a href="">Product One</a></h3>
-				<div id="product-details">
-					<span class="product-leadin">
-						<span class="product-date">Sept. 3, 2008</span> in <span class="product-category">Development Tools, Versioning, Staging and Deployment</span>
-					</span>
-				<span class="company-logo"><img alt="" src="images/company-logo.png" /></span>
-				<p class="product-description">How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
-				<p class="new-in-this-release">New in this release: </p>
-				<p class="new-details">New messages to users. Now compatible with any editor.</p>
-			  </li>
-			  <li>
-			    <h3><a href="">Product Two</a></h3>
-				<div id="product-details">
-					<span class="product-leadin">
-						<span class="product-date">Sept. 3, 2008</span> in <span class="product-category">Development Tools, Versioning, Staging and Deployment</span>
-					</span>
-				<span class="company-logo"><img alt="" src="images/company-logo.png" /></span>
-				<p class="product-description">How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
-				<p class="new-in-this-release">New in this release: </p>
-				<p class="new-details">New messages to users. Now compatible with any editor.</p>
-			  </li>
-
-			</ul>
-<div id="download-footer-links">			
-			<span class="next-previous">
-					<a href="previous" class="next-previous-item">previous</a>&nbsp;|&nbsp;
-					<a href="page01" class="next-previous-item">1</a>&nbsp;|&nbsp;
-					<a href="page02" class="next-previous-item">2</a>&nbsp;|&nbsp;
-					<a href="page03" class="next-previous-item">3</a>&nbsp;|&nbsp;
-					<a href="page04" class="next-previous-item">4</a>&nbsp;|&nbsp;
-					<a href="" class="next-previous-item">next</a>
-			</span>			
-</div>	
-
+				<p>Latest release: Plone 3.1.6 (October 2008)</p>
+				<div id="download-plone">
+					<div id="download-plone-hdr"></div>
+				</div>
+			</div>
 		</div>
-
 	</div>
 
+
+	<div class="grid-row">
+		<div class="grid-cell position-leftmost width-two-thirds">
+			<div class="pane">
+
+		 		<h1>Add on Product Releases <a href="" class="versions">for Plone 3 ▼</a></h1>
+
+				<div class="downloadssearch">
+					<input type="search" value="Search Downloads…" size="25" />
+					&nbsp;
+					<a href="">Advanced search</a>
+				</div>
+
+				<div id="sort-by"><span class="sort">Sort by:</span><a href="" class="plain">Most recent</span>&nbsp;<a href="" class="selected">Most popular</a></div>
+
+				<div class="" id="categories">
+
+					<span class="advice">Make sure you have Plone installed before downloading the add-ons and ensure you are using add-ons that have been certified for use with your particular version.</span>
+
+					<h2>All Categories</h2>
+
+					<div id="numreleases">809 releases matching your criteria, sorted with most recent releases first.</div>
+
+					<ul class="downloads">
+					  <li>
+					    <h3><a href="">Product One</a></h3>
+						<div id="product-details">
+							<span class="product-leadin">
+								<span class="product-date">Sept. 3, 2008</span> in <span class="product-category">Development Tools, Versioning, Staging and Deployment</span>
+							</span>
+						<span class="company-logo"><img alt="" src="images/company-logo.png" /></span>
+						<p class="product-description">How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
+						<p class="new-in-this-release">New in this release: </p>
+						<p class="new-details">New messages to users. Now compatible with any editor.</p>
+					  </li>
+					  <li>
+					    <h3><a href="">Product Two</a></h3>
+						<div id="product-details">
+							<span class="product-leadin">
+								<span class="product-date">Sept. 3, 2008</span> in <span class="product-category">Development Tools, Versioning, Staging and Deployment</span>
+							</span>
+						<span class="company-logo"><img alt="" src="images/company-logo.png" /></span>
+						<p class="product-description">How to ask for help when you have a problem. Following these simple steps will make everything easier both for yourself and us.</p>
+						<p class="new-in-this-release">New in this release: </p>
+						<p class="new-details">New messages to users. Now compatible with any editor.</p>
+					  </li>
+
+					</ul>
+				</div>
+
+			</div>
+		</div> <!-- End cell -->
+
+		<div class="grid-cell position-two-thirds width-third">
+			<div class="sidebar">
+				<h2 class="add-on-categories-hdr">Add-on Categories</h2>
+
+				<ol id="add-on-categories">
+					<li>All categories</li>
+					<li><a href="">Plone releases</a></li>
+					<li><a href="">Themes</a></li>
+					<li><a href="">Theming Tools</a></li>
+					<li>...etc. </li>
+				</ol>
+
+			</div>
+		</div> <!-- End cell -->
+	</div> <!-- End row -->
 
 </div>
+
+<div style="clear:both"></div>
 
 </div></div> <!-- end inner/outer-wrapper -->
 
@@ -154,7 +152,7 @@
 	<a id="footer-logo"
 	   href="http://plone.org" 
 	   title="Plone CMS, the open source content management system">
-		<img alt="" src="images/footer-logo.png" />
+		<img alt="" src="../images/footer-logo.png" />
 	</a>
 	<div id="footer-text">
 		<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
