--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -57,14 +57,27 @@
 
 
 <div id="content-wrapper">
-	<div id="content">
+	<div class="grid-row">
+		<div class="grid-cell position-leftmost width-two-thirds">
+			<div id="content">
 
-    	<h1>Content goes here</h1>
+				<h1>Content goes here</h1>
 
-    	<p>Lorem ipsum…</p>
+				<p>Lorem ipsum…</p>
 
-    </div>
+			</div>
+		</div> <!-- End cell -->
+
+		<div class="grid-cell position-two-thirds width-third">
+			<div id="sidebar">
+				<h1>Sidebar goes here</h1>
+			</div>
+		</div>
+		
+	</div> <!-- End row -->
 </div>
+
+<div style="clear:both">&nbsp;</div>
 
 </div></div> <!-- end inner/outer-wrapper -->
 
