Adding footer sitemap.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23863

--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -89,7 +89,75 @@
 	</a>
 	<div id="footer-text">
 		<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
-		<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of the Plone Foundation. Distributed under the GNU GPL license.</p>
+		<p>Plone<sup>®</sup> and the Plone logo are registered trademarks of Plone Foundation. Distributed under the GPL license. <!-- Plone &hearts; You  --> You’re looking good today.</p>
+	</div>
+	
+	<div id="sitemap">
+		<dl>
+			<dt><a href="">Plone for…</a></dt>
+			<dd><a href="">Small/Medium Business </a></dd>
+			<dd><a href="">Enterprise            </a></dd>
+			<dd><a href="">Non-profits           </a></dd>
+			<dd><a href="">Government            </a></dd>
+			<dd><a href="">Education             </a></dd>
+			<dd><a href="">Science               </a></dd>
+			<dd><a href="">Media &amp; Publishing</a></dd>
+		</dl>
+
+		<dl>
+			<dt><a href="">Downloads</a></dt>
+			<dd><a href="">Get Plone                           </a></dd>
+			<dd><a href="">Themes                              </a></dd>
+			<dd><a href="">Development tools                   </a></dd>
+			<dd><a href="">Authentication                      </a></dd>
+			<dd><a href="">Survey tools                        </a></dd>
+			<dd><a href="">More…                               </a></dd>
+			<dd><a href="">Submit your add-on                  </a></dd>
+		</dl>
+
+		<dl>
+			<dt><a href="">Documentation</a></dt>
+			<dd><a href="">FAQs                      </a></dd>
+			<dd><a href="">Tutorial videos           </a></dd>
+			<dd><a href="">Manuals                   </a></dd>
+			<dd><a href="">Books                     </a></dd>
+			<dd><a href="">Knowledge Base            </a></dd>
+			<dd><a href="">Error Reference           </a></dd>
+			<dd><a href="">Module documentation      </a></dd>
+		</dl>
+
+		<dl>
+			<dt><a href="">Developers</a></dt>
+			<dd><a href="">Roadmap                 </a></dd>
+			<dd><a href="">Report bugs             </a></dd>
+			<dd><a href="">Suggest new features    </a></dd>
+			<dd><a href="">Latest changes          </a></dd>
+			<dd><a href="">Browse source           </a></dd>
+			<dd><a href="">Contribute to Plone     </a></dd>
+			<dd><a href="">Read blogs              </a></dd>
+		</dl>
+
+		<dl>
+			<dt><a href="">Plone Foundation</a></dt>
+			<dd><a href="">Donate            </a></dd>
+			<dd><a href="">Sponsors          </a></dd>
+			<dd><a href="">Meeting minutes   </a></dd>
+			<dd><a href="">Board members     </a></dd>
+			<dd><a href="">Foundation members</a></dd>
+			<dd><a href="">Apply for membership</a></dd>
+			<dd><a href="">Contact           </a></dd>
+		</dl>
+
+		<dl>
+			<dt><a href="">Support</a></dt>
+			<dd><a href="">Commercial support    </a></dd>
+			<dd><a href="">Chat room             </a></dd>
+			<dd><a href="">Forums                </a></dd>
+			<dd><a href="">Sector-specific forums</a></dd>
+			<dd><a href="">Region-specific forums</a></dd>
+			<dd><a href="">Local User Groups     </a></dd>
+			<dd><a href="">Training              </a></dd>
+		</dl>
 	</div>
 </div>
 
