Fixing login link, sorry Batman.
svn path=/PloneOrg/sandbox/xdv/new.plone.org/; revision=23864

--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -33,7 +33,7 @@
 	</div>
 	
 	<div id="user">
-		<a href="">Bruce Wayne ▼</a>
+		<a href="login">Log in</a>
 	</div>
 	
 	<ul id="main-nav" class="navigation">
