update with plone.org proxying settings
svn path=/new.plone.org/trunk/; revision=24303

--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -12,10 +12,10 @@
 	<link rel="alternate" type="application/rss+xml" href="http://plone.org/events/community/training/training-announcements/RSS" title="Upcoming Plone training" /> 
 
 	<style type="text/css" media="screen">
-		@import url("plone.css");
+		@import url("/plone.css");
 	</style>
 	<!--[if IE]>
-        <style type="text/css" media="all">@import url(ie.css);</style>
+        <style type="text/css" media="all">@import url(/ie.css);</style>
     <![endif]-->	
 
 	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.2.6/jquery.min.js"></script> -->
