make paths absolute in trac theme
svn path=/new.plone.org/trunk/; revision=24536

--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 	<title>plone.org redesign prototype</title>
 	<style type="text/css" media="screen">
-		@import url("plone.css");
+		@import url("/plone.css");
 	</style>
 	<!--[if IE]>
-        <style type="text/css" media="all">@import url(ie.css);</style>
+        <style type="text/css" media="all">@import url(/ie.css);</style>
     <![endif]-->	
 
 	<link rel="stylesheet" href="http://dev.plone.org/plone/chrome/common/css/diff.css" type="text/css" />
@@ -87,7 +87,7 @@
 	<a id="footer-logo" 
 	   href="http://plone.org" 
 	   title="Plone CMS, the open source content management system">
-		<img alt="" src="images/footer-logo.png" />
+		<img alt="" src="/images/footer-logo.png" />
 	</a>
 	<div id="footer-text">
 		<p>The Plone<sup>®</sup> CMS — Open Source Content Management System is Copyright © 2000-2008 by the Plone Foundation et al.</p>
