It's #region-content, the #content area is the actual body text.
svn path=/new.plone.org/trunk/; revision=24633

--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -59,7 +59,7 @@
 <div id="content-wrapper">
 	<div class="grid-row">
 		<div class="grid-cell position-leftmost width-two-thirds">
-			<div id="content">
+			<div id="region-content">
 
 				<h1>Content goes here</h1>
 
