No Lorem Ipsum if the transform fails.
svn path=/new.plone.org/trunk/; revision=24637

--- a/new.plone.org/static/plone.html
+++ b/new.plone.org/static/plone.html
@@ -61,9 +61,7 @@
 		<div class="grid-cell position-leftmost width-two-thirds">
 			<div id="region-content">
 
-				<h1>Content goes here</h1>
-
-				<p>Lorem ipsum…</p>
+				<!-- Content goes here -->
 
 			</div>
 		</div> <!-- End cell -->
