--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -67,9 +67,7 @@
 <div id="content-wrapper">
     <div id="content">
 
-    	<h1>Content goes here</h1>
-
-    	<p>Lorem ipsum…</p>
+				<!-- Content goes here -->
 
     </div>
 </div>
