Make the static links go to the correct location
svn path=/new.plone.org/trunk/; revision=24639

--- a/new.plone.org/static/trac.html
+++ b/new.plone.org/static/trac.html
@@ -35,12 +35,12 @@
 	</div>
 	
 	<ul id="main-nav" class="navigation">
-		<li><a href=".">Home</a></li
-		><li><a href="/downloads">Downloads</a></li
-		><li><a href="/documentation">Documentation</a></li
-		><li class="selected"><a href="/development">Developers</a></li
-		><li><a href="/foundation">Plone&nbsp;Foundation</a></li
-		><li><a href="/support">Support</a></li>
+		<li><a href="http://plone.org">Home</a></li
+		><li><a href="http://plone.org/downloads">Downloads</a></li
+		><li><a href="http://plone.org/documentation">Documentation</a></li
+		><li class="selected"><a href="http://dev.plone.org/plone">Developers</a></li
+		><li><a href="http://plone.org/foundation">Plone&nbsp;Foundation</a></li
+		><li><a href="http://plone.org/support">Support</a></li>
 	</ul>
 
 	<ul id="sub-nav" class="navigation">
